unpackaged/main/default/objects/Activity_Log_ACCC__c/Activity_Log_ACCC__c.object-meta.xml
<CustomObject>
    <label>Activity Log ACCC</label>
    <nameField>
        <displayFormat>ACCC-{0000}</displayFormat>
        <label>Activity Log ACCC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Logs ACCC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>