unpackaged/main/default/objects/Activity_Log_ACCC__c/fields/ACCC_Status__c.field-meta.xml
<CustomField>
    <fullName>ACCC_Status__c</fullName>
    <label>ACCC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Mail has been sent for requesting CC</fullName>
            </value>
            <value>
                <fullName>Received and Validated CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>