unpackaged/main/default/objects/Activity_Log_ACCC__c/fields/Booth_ID__c.field-meta.xml
<CustomField>
    <fullName>Booth_ID__c</fullName>
    <label>Booth ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>