unpackaged/main/default/objects/Activity_Log_ACCC__c/fields/CC_Received_and_Validated__c.field-meta.xml
<CustomField>
    <fullName>CC_Received_and_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CC Received and Validated</label>
    <type>Checkbox</type>
</CustomField>