unpackaged/main/default/objects/Activity_Log_ACCC__c/fields/Contact_Email_Adress__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Adress__c</fullName>
    <label>Contact Email Adress</label>
    <type>Email</type>
</CustomField>