unpackaged/main/default/objects/Activity_Log_ACCC__c/fields/Customer_Service_Inquiry_Case__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Inquiry_Case__c</fullName>
    <label>Customer Service Inquiry (Case)</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Activity Logs ACCC</relationshipLabel>
    <relationshipName>Activity_Logs_ACCC</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>