unpackaged/main/default/objects/Activity_Log_ACCC__c/fields/Date_Time_CC_was_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_CC_was_Received__c</fullName>
    <label>Date/Time CC was Received</label>
    <type>DateTime</type>
</CustomField>