unpackaged/main/default/objects/Activity_Log_ACCC__c/fields/Date_Time_Requested_for_CC__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Requested_for_CC__c</fullName>
    <label>Date/Time Requested for CC</label>
    <type>DateTime</type>
</CustomField>