unpackaged/main/default/objects/Activity_Log_ACCC__c/fields/Mail_has_been_Sent_on_Requesting_CC__c.field-meta.xml
<CustomField>
    <fullName>Mail_has_been_Sent_on_Requesting_CC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail has been Sent on Requesting CC</label>
    <type>Checkbox</type>
</CustomField>