unpackaged/main/default/objects/Activity_Log_ACCC__c/fields/Payment_ID_Info__c.field-meta.xml
<CustomField>
    <fullName>Payment_ID_Info__c</fullName>
    <label>Payment ID Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>