unpackaged/main/default/objects/Activity_Log_ACCC__c/fields/Session_ID_info__c.field-meta.xml
<CustomField>
    <fullName>Session_ID_info__c</fullName>
    <label>Session ID info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>